refinamiento de la pagina

--- a/html/delivery.html
+++ b/html/delivery.html
@@ -41,7 +41,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="menu.html#pizza">Pizza</a></li>
                                 <li><a class="dropdown-item" href="menu.html#empanada">Empanadas</a></li>
                                 <li><a class="dropdown-item" href="menu.html#minuta">Minutas</a></li>
@@ -55,7 +55,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Delivery
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Pizza</a></li>
                                 <li><a class="dropdown-item" href="#">Empanadas</a></li>
                                 <li><a class="dropdown-item" href="#">Minutas</a></li>
@@ -105,10 +105,7 @@
                                                 <p>Pizza muzzarella con aceituna y oregano</p>
                                                 <label>
                                                     Cantidad
-                                                    <select ng-model="modalctrl.qty"
-                                                        ng-options="qty for qty in modalctrl.qtyOptions"
-                                                        ng-change="modalctrl.updateQty(modalctrl.qty)"
-                                                        class="ng-pristine ng-valid ng-touched">
+                                                    <select class="ng-pristine ng-valid ng-touched">
                                                         <option label="1" value="number:1" selected="selected">1
                                                         </option>
                                                         <option label="2" value="number:2">2</option>
@@ -160,10 +157,7 @@
                                                 <p>Pizza muzzarella con aceituna y oregano</p>
                                                 <label>
                                                     Cantidad
-                                                    <select ng-model="modalctrl.qty"
-                                                        ng-options="qty for qty in modalctrl.qtyOptions"
-                                                        ng-change="modalctrl.updateQty(modalctrl.qty)"
-                                                        class="ng-pristine ng-valid ng-touched">
+                                                    <select class="ng-pristine ng-valid ng-touched">
                                                         <option label="1" value="number:1" selected="selected">1
                                                         </option>
                                                         <option label="2" value="number:2">2</option>
@@ -214,10 +208,7 @@
                                                 <p>Pizza muzzarella con aceituna y oregano</p>
                                                 <label>
                                                     Cantidad
-                                                    <select ng-model="modalctrl.qty"
-                                                        ng-options="qty for qty in modalctrl.qtyOptions"
-                                                        ng-change="modalctrl.updateQty(modalctrl.qty)"
-                                                        class="ng-pristine ng-valid ng-touched">
+                                                    <select class="ng-pristine ng-valid ng-touched">
                                                         <option label="1" value="number:1" selected="selected">1
                                                         </option>
                                                         <option label="2" value="number:2">2</option>
@@ -268,10 +259,7 @@
                                                 <p>Pizza muzzarella con aceituna y oregano</p>
                                                 <label>
                                                     Cantidad
-                                                    <select ng-model="modalctrl.qty"
-                                                        ng-options="qty for qty in modalctrl.qtyOptions"
-                                                        ng-change="modalctrl.updateQty(modalctrl.qty)"
-                                                        class="ng-pristine ng-valid ng-touched">
+                                                    <select class="ng-pristine ng-valid ng-touched">
                                                         <option label="1" value="number:1" selected="selected">1
                                                         </option>
                                                         <option label="2" value="number:2">2</option>
@@ -323,10 +311,7 @@
                                                 <p>Pizza muzzarella con aceituna y oregano</p>
                                                 <label>
                                                     Cantidad
-                                                    <select ng-model="modalctrl.qty"
-                                                        ng-options="qty for qty in modalctrl.qtyOptions"
-                                                        ng-change="modalctrl.updateQty(modalctrl.qty)"
-                                                        class="ng-pristine ng-valid ng-touched">
+                                                    <select class="ng-pristine ng-valid ng-touched">
                                                         <option label="1" value="number:1" selected="selected">1
                                                         </option>
                                                         <option label="2" value="number:2">2</option>
@@ -377,10 +362,7 @@
                                                 <p>Pizza muzzarella con aceituna y oregano</p>
                                                 <label>
                                                     Cantidad
-                                                    <select ng-model="modalctrl.qty"
-                                                        ng-options="qty for qty in modalctrl.qtyOptions"
-                                                        ng-change="modalctrl.updateQty(modalctrl.qty)"
-                                                        class="ng-pristine ng-valid ng-touched">
+                                                    <select class="ng-pristine ng-valid ng-touched">
                                                         <option label="1" value="number:1" selected="selected">1
                                                         </option>
                                                         <option label="2" value="number:2">2</option>
