--- a/html/menu.html
+++ b/html/menu.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <!-- Required meta tags -->
@@ -34,14 +34,14 @@
                             <a class="nav-link active color_white" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active color_white" href="sucursal.html">    Sucursales</a>
+                            <a class="nav-link active color_white" href="sucursal.html"> Sucursales</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown"
+                            <a class="nav-link dropdown-toggle color_white" href="#" 
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                            <ul class="dropdown-menu" >
                                 <li><a class="dropdown-item" href="#pizza">Pizza</a></li>
                                 <li><a class="dropdown-item" href="#empanada">Empanadas</a></li>
                                 <li><a class="dropdown-item" href="#minuto">Minutas</a></li>
@@ -51,17 +51,17 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
-                              data-bs-toggle="dropdown" aria-expanded="false">
-                              Delivery
+                            <a class="nav-link dropdown-toggle color_white" href="#" 
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Delivery
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                              <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
-                              <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
-                              <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
-                              <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
+                                <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
+                                <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
+                                <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
                             </ul>
-                          </li>
+                        </li>
                         <li class="nav-item ">
                             <a class="nav-link active color_white" href="opinion.html">Opinion</a>
                         </li>
@@ -191,12 +191,13 @@
                 </div><!-- End Card -->
             </div>
         </section><!-- End Section -->
-        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="empanada">
+        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="minuta">
             <h2 class="text-center">Minutas</h2>
             <div class="row w-100 mx-auto row_gap text-center">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
                     <div class="card">
-                        <img src="../img/Minutas/milanesa_fritas.jpg" alt="milanesa napolitana con fritas" class="card-img-top">
+                        <img src="../img/Minutas/milanesa_fritas.jpg" alt="milanesa napolitana con fritas"
+                            class="card-img-top">
                         <div class="card-body">
                             <h5>milanesa napolitana con fritas</h5>
                             <p class="card-text ">milanesa con jamon y muzza con guarnicion de papas fritas</p>
@@ -214,7 +215,8 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
                     <div class="card">
-                        <img src="../img/Minutas/milanesa_ensalada.png" alt="milanesa con ensalada" class="card-img-top">
+                        <img src="../img/Minutas/milanesa_ensalada.png" alt="milanesa con ensalada"
+                            class="card-img-top">
                         <div class="card-body">
                             <h5>milanesa con ensalada</h5>
                             <p class="card-text ">milanesa al horno guarnicion de tomate y lechuga</p>
@@ -223,24 +225,28 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
                     <div class="card">
-                        <img src="../img/Minutas/sandwich_milanesaC.jpg" alt="Sandwich de milanesa completo" class="card-img-top">
+                        <img src="../img/Minutas/sandwich_milanesaC.jpg" alt="Sandwich de milanesa completo"
+                            class="card-img-top">
                         <div class="card-body">
                             <h5>Sandwich de milanesa completo</h5>
-                            <p class="card-text ">Sandwich de milanesa con tomate,lechuga,jamon y queso , con guarnicion de fritas</p>
+                            <p class="card-text ">Sandwich de milanesa con tomate,lechuga,jamon y queso , con guarnicion
+                                de fritas</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
                     <div class="card">
-                        <img src="../img/Minutas/hamburguesa_fritas.jpg" alt="hamburguesa completa" class="card-img-top">
+                        <img src="../img/Minutas/hamburguesa_fritas.jpg" alt="hamburguesa completa"
+                            class="card-img-top">
                         <div class="card-body">
                             <h5>hamburguesa completa</h5>
-                            <p class="card-text ">hamburguesa con tomate,lechuga,cebolla morada,jamon y queso chedar, con guarnicion de fritas</p>
+                            <p class="card-text ">hamburguesa con tomate,lechuga,cebolla morada,jamon y queso chedar,
+                                con guarnicion de fritas</p>
                         </div>
                     </div>
                 </div>
-
             </div>
+        </section>
     </main>
     <!--End Main-->
 
