--- a/html/opinion.html
+++ b/html/opinion.html
@@ -37,11 +37,11 @@
                             <a class="nav-link active color_white" href="sucursal.html">Sucursales</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown"
+                            <a class="nav-link dropdown-toggle color_white" href="#" 
                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                            <ul class="dropdown-menu" >
                                 <li><a class="dropdown-item" href="menu.html#pizza">Pizza</a></li>
                                 <li><a class="dropdown-item" href="menu.html#empanada">Empanadas</a></li>
                                 <li><a class="dropdown-item" href="menu.html#minuta">Minutas</a></li>
@@ -51,11 +51,11 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle color_white" href="#"  role="button"
                               data-bs-toggle="dropdown" aria-expanded="false">
                               Delivery
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                            <ul class="dropdown-menu" >
                               <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
                               <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
                               <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
@@ -73,7 +73,7 @@
     <!--End Nav-->
     <main>
         <h1 class="text-center my-3 color_title">Opinion</h1>
-        <form action="" class="container my-3 bg_red p-4 fs-3 color_white">
+        <form  class="container my-3 bg_red p-4 fs-3 color_white">
             <div>
                 <h2 class="text-center my-3">Datos del cliente</h2>
                 <div class="mb-3">
