--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -54,7 +54,7 @@
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Delivery
               </a>
-              <ul class="dropdown-menu" ">
+              <ul class="dropdown-menu" >
                 <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
                 <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
                 <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
