--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <nav class="navbar bg-light sticky-top nav_shadow ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
+      <h5 class="nav_titleDesktop ">Pizza Party</h5>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon fs-2 center_icon">☰</span>
@@ -56,7 +57,8 @@
                 Delivery
               </a>
               <ul class="dropdown-menu" >
-                <li><a class="dropdown-item" href="html/delivery.html">Pizza</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html#promos">Promociones</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html#pizza">Pizza</a></li>
                 <li><a class="dropdown-item" href="html/delivery.html">Empanadas</a></li>
                 <li><a class="dropdown-item" href="html/delivery.html">Minutas</a></li>
                 <li><a class="dropdown-item" href="html/delivery.html">Bebida</a></li>
