--- a/html/opinion.html
+++ b/html/opinion.html
@@ -17,6 +17,7 @@
     <nav class="navbar bg-light sticky-top nav_shadow ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="../img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
+            <h5 class="nav_titleDesktop ">Pizza Party</h5>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon fs-1 center_icon">☰</span>
@@ -37,11 +38,11 @@
                             <a class="nav-link active color_white" href="sucursal.html">Sucursales</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#" 
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle color_white" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
                             </a>
-                            <ul class="dropdown-menu" >
+                            <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="menu.html#pizza">Pizza</a></li>
                                 <li><a class="dropdown-item" href="menu.html#empanada">Empanadas</a></li>
                                 <li><a class="dropdown-item" href="menu.html#minuta">Minutas</a></li>
@@ -51,17 +52,18 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle color_white" href="#"  role="button"
-                              data-bs-toggle="dropdown" aria-expanded="false">
-                              Delivery
+                            <a class="nav-link dropdown-toggle color_white" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Delivery
                             </a>
-                            <ul class="dropdown-menu" >
-                              <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
-                              <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
-                              <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
-                              <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="delivery.html#promos">Promociones</a></li>
+                                <li><a class="dropdown-item" href="delivery.html#pizza">Pizza</a></li>
+                                <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
+                                <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
+                                <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
                             </ul>
-                          </li>
+                        </li>
                         <li class="nav-item ">
                             <a class="nav-link active color_white" href="opinion.html">Opinion</a>
                         </li>
@@ -73,7 +75,7 @@
     <!--End Nav-->
     <main>
         <h1 class="text-center my-3 color_title">Opinion</h1>
-        <form  class="container my-3 bg_red p-4 fs-3 color_white">
+        <form class="container my-3 bg_red p-4 fs-3 color_white">
             <div>
                 <h2 class="text-center my-3">Datos del cliente</h2>
                 <div class="mb-3">
