--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -17,6 +17,7 @@
   <nav class="navbar bg-light sticky-top nav_shadow">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="../img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
+      <h5 class="nav_titleDesktop ">Pizza Party</h5>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon fs-2 center_icon">☰</span>
@@ -36,8 +37,8 @@
               <a class="nav-link active color_white" href="sucursal.html">Sucursales</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color_white" href="#" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle color_white" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Menu
               </a>
               <ul class="dropdown-menu">
@@ -50,12 +51,13 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color_white" href="#"  role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle color_white" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Delivery
               </a>
-              <ul class="dropdown-menu" >
-                <li><a class="dropdown-item" href="delivery.html">Pizza</a></li>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="delivery.html#promos">Promociones</a></li>
+                <li><a class="dropdown-item" href="delivery.html#pizza">Pizza</a></li>
                 <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
                 <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
                 <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
