Refinamiento de la segunda entrega del proyecto

--- a/html/delivery.html
+++ b/html/delivery.html
@@ -59,9 +59,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#promos">Promociones</a></li>
                                 <li><a class="dropdown-item" href="#pizza">Pizza</a></li>
-                                <li><a class="dropdown-item" href="#">Empanadas</a></li>
-                                <li><a class="dropdown-item" href="#">Minutas</a></li>
-                                <li><a class="dropdown-item" href="#">Bebida</a></li>
+                                <li><a class="dropdown-item" href="#empanada">Empanadas</a></li>
+                                <li><a class="dropdown-item" href="#minuta">Minutas</a></li>
+                                <li><a class="dropdown-item" href="#bebida">Bebida</a></li>
                             </ul>
                         </li>
                         <li class="nav-item ">
