--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -58,9 +58,9 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="delivery.html#promos">Promociones</a></li>
                 <li><a class="dropdown-item" href="delivery.html#pizza">Pizza</a></li>
-                <li><a class="dropdown-item" href="delivery.html">Empanadas</a></li>
-                <li><a class="dropdown-item" href="delivery.html">Minutas</a></li>
-                <li><a class="dropdown-item" href="delivery.html">Bebida</a></li>
+                <li><a class="dropdown-item" href="delivery.html#empanada">Empanadas</a></li>
+                <li><a class="dropdown-item" href="delivery.html#minuta">Minutas</a></li>
+                <li><a class="dropdown-item" href="delivery.html#bebida">Bebida</a></li>
               </ul>
             </li>
             <li class="nav-item ">
