--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
               <ul class="dropdown-menu" >
                 <li><a class="dropdown-item" href="html/delivery.html#promos">Promociones</a></li>
                 <li><a class="dropdown-item" href="html/delivery.html#pizza">Pizza</a></li>
-                <li><a class="dropdown-item" href="html/delivery.html">Empanadas</a></li>
-                <li><a class="dropdown-item" href="html/delivery.html">Minutas</a></li>
-                <li><a class="dropdown-item" href="html/delivery.html">Bebida</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html#empanada">Empanadas</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html#minuta">Minutas</a></li>
+                <li><a class="dropdown-item" href="html/delivery.html#bebida">Bebida</a></li>
               </ul>
             </li>
             <li class="nav-item ">
